--- a/Lists.html
+++ b/Lists.html
@@ -4,13 +4,20 @@
 <!-- From kipid.tistory CDN -->
 <link rel="stylesheet" media="all" type="text/css" href="http://cfs.tistory.com/custom/blog/146/1468360/skin/images/docuK-2.2.css">
 <script src="http://cfs.tistory.com/custom/blog/146/1468360/skin/images/docuK-prepare-2.2.js"></script>
+<style>
+.docuK a.emph {font-weight:bold}
+.docuK a.emph:link {color:rgb(255,160,200)}
+.docuK a.emph:visited {color:rgb(255,140,180)}
+.docuK a.emph:active {color:rgb(80,250,250)}
+.docuK a.emph:hover {color:rgb(200,255,100); text-decoration:underline}
+</style>
 </codeprint><!-- docuK-style -->
 
 <codeprint id="docuK-docu">
 <div class="docuK">
 <meta name="description" content="List of posts in kipid's blog" />
 <div class="sec"><h1>Lists</h1>
-	<div class="p">블로그 글들 리스트를 정리해 놓은 것입니다. 제목뒤 날짜는 보통 처음 글을 올린 날짜입니다. (올려놓고 꾸준히 업데이트하는 글들이 많아서...)</div>
+	<div class="p">블로그 글들 리스트를 정리해 놓은 것입니다. 제목뒤 날짜는 보통 처음 글을 올린 날짜입니다. (올려놓고 꾸준히 업데이트하는 글들이 많아서...) 공들여 작성한 글은 <a id="highlight" href="#highlight" class="emph">highlight</a> 함.</div>
 	<div class="p">
 		단축키 (T: Table of Contents, F: Forward Section, D: Previous Section) 도 활용해 보시길.
 	</div>
@@ -21,9 +28,11 @@
 
 <div class="sec"><h2 class="no-sec-N" id="sec-Newest">Newest posts</h2>
 	<ul>
+		<li><a href="http://kipid.tistory.com/entry/Personal-selection-of-Dances-Performances">Personal selection of Dances/Performances</a>, 2014-11-26</li>
 		<li><a href="http://kipid.tistory.com/entry/Introducing-what-we-are-making-Recoevenet">Introducing what we are making : Recoeve.net</a>, 2014-11-21</li>
 		<li><a href="http://kipid.tistory.com/entry/%EB%B6%80%EC%B1%84%EC%A3%BC%EB%8F%84-%EC%84%B1%EC%9E%A5%EC%97%90%EC%84%9C-%EC%86%8C%EB%93%9D%EC%A3%BC%EB%8F%84-%EC%84%B1%EC%9E%A5%EC%9C%BC%EB%A1%9C">부채주도 성장에서 소득주도 성장으로</a>, 2014-11-14</li>
 		<li><a href="http://kipid.tistory.com/entry/%EC%8A%A4%EB%A7%88%ED%8A%B8-%EC%A7%80%EA%B0%91-Smart-wallet-Apple-pay-Google-wallet-%EB%93%B1-%EC%9D%80-%EC%96%B4%EB%8A%90-%EB%B0%A9%ED%96%A5%EC%9C%BC%EB%A1%9C-%EB%B0%9C%EC%A0%84%ED%95%A0%EA%B9%8C">스마트 지갑 (Smart wallet: Apple pay, Google wallet 등) 은 어느 방향으로 발전할까?</a>, 2014-11-11</li>
+		<li><a href="http://kipid.tistory.com/entry/%EA%B3%A0%ED%86%B5%EC%97%86%EC%9D%B4-%EC%A3%BD%EB%8A%94-%EB%B0%A9%EB%B2%95-%EC%95%88%EB%9D%BD%EC%82%AC-%EB%B0%A9%EB%B2%95-%EC%9E%90%EC%82%B4%ED%95%A0-%EA%B6%8C%EB%A6%AC">고통없이 죽는 방법 (안락사 방법), 자살할 권리</a>, 2014-11-21</li>
 		<li><a href="http://kipid.tistory.com/entry/Laniakea-Our-home-supercluster">Laniakea: Our home supercluster</a>, 2014-09-19</li>
 		<li><a href="http://kipid.tistory.com/entry/HTTP-Cookie-in-Web-HTML-Javascript-and-Server">HTTP Cookie in Web / HTML / Javascript and Server</a>, 2014-08-31</li>
 		<li><a href="http://kipid.tistory.com/entry/Decoherence-the-Measurement-Problem-of-Quantum-Mechanics">Decoherence, the Measurement Problem of Quantum Mechanics</a>, 2014-07-29</li>
@@ -49,7 +58,7 @@
 
 <div class="sec"><h2 class="no-sec-N" id="sec-Recoeve">[Recoeve.net]</h2>
 	<ul>
-		<li><a href="http://kipid.tistory.com/entry/Introducing-what-we-are-making-Recoevenet">Introducing what we are making : Recoeve.net</a>, 2014-11-21</li>
+		<li><a class="emph" href="http://kipid.tistory.com/entry/Introducing-what-we-are-making-Recoevenet">Introducing what we are making : Recoeve.net</a>, 2014-11-21</li>
 		<li>The rest are hiden for the security reason. And these will be open after 5 years from now. (2020)</li>
 	</ul>
 </div><!-- sec: Recoeve -->
@@ -57,7 +66,7 @@
 <div class="sec"><h2 class="no-sec-N" id="sec-PM">[Physics/Math] Category</h2>
 	<div class="subsec"><h3 id="sec-Physics">Physics (물리 개념과 이론들에 관한 설명들.)</h3>
 		<ul>
-			<li><a href="http://kipid.tistory.com/entry/Tensor">텐서(Tensor)와 상대론(Relativity) - 0. 텐서(Tensor)란?</a>, 2014-03-19</li>
+			<li><a class="emph" href="http://kipid.tistory.com/entry/Tensor">텐서(Tensor)와 상대론(Relativity) - 0. 텐서(Tensor)란?</a>, 2014-03-19</li>
 			<li><a href="http://kipid.tistory.com/entry/Special-Relativity">텐서(Tensor)와 상대론(Relativity) - 1. 상대론(Relativity)</a>, 2014-02-17</li>
 		</ul>
 		<div class="p"></div>
@@ -67,15 +76,15 @@
 		</ul>
 		<div class="p"></div>
 		<ul>
-			<li><a href="http://kipid.tistory.com/entry/SI-cgs-unit-and-physical-constants">SI, cgs 단위계(unit) 및 물리상수(physical constants)</a>, 2014-02-17</li>
-			<li><a href="http://kipid.tistory.com/entry/Entropy">엔트로피(Entropy) 개념에 대한 이해</a>, 2014-01-24</li>
+			<li><a class="emph" href="http://kipid.tistory.com/entry/SI-cgs-unit-and-physical-constants">SI, cgs 단위계(unit) 및 물리상수(physical constants)</a>, 2014-02-17</li>
+			<li><a class="emph" href="http://kipid.tistory.com/entry/Entropy">엔트로피(Entropy) 개념에 대한 이해</a>, 2014-01-24</li>
 		</ul>
 		<div class="p"></div>
 	</div>
 	<div class="subsec"><h3 id="sec-Math">Mathematics (수학 개념과 이론들에 관한 설명들.)</h3>
 		<ul>
-			<li><a href="http://kipid.tistory.com/entry/Method-of-Lagrange-multipliers">Method of Lagrange multipliers (English)</a>, 2014-03-21; and <a href="http://kipid.tistory.com/entry/Optimization-with-the-Method-of-Lagrange-multipliers">최적화, 라그랑지 승수법 (Optimization with the Method of Lagrange multipliers)</a>, 2014-03-18; 앞쪽의 영어버전이 더 자세히 작성되어 있음.</li>
-			<li><a href="http://kipid.tistory.com/entry/Linear-Algebra">선형 대수학 간단한 정리들 (Linear Algebra)</a>, 2014-03-18</li>
+			<li><a class="emph" href="http://kipid.tistory.com/entry/Method-of-Lagrange-multipliers">Method of Lagrange multipliers (English)</a>, 2014-03-21; and <a class="emph" href="http://kipid.tistory.com/entry/Optimization-with-the-Method-of-Lagrange-multipliers">최적화, 라그랑지 승수법 (Optimization with the Method of Lagrange multipliers)</a>, 2014-03-18; 앞쪽의 영어버전이 더 자세히 작성되어 있음.</li>
+			<li><a class="emph" href="http://kipid.tistory.com/entry/Linear-Algebra">선형 대수학 간단한 정리들 (Linear Algebra)</a>, 2014-03-18</li>
 			<li><a href="http://kipid.tistory.com/entry/Dirac-delta-function">디락 델타 함수 (Dirac delta function)</a>, 2014-02-13</li>
 		</ul>
 		<div class="p"></div>
@@ -93,13 +102,13 @@
 		<ul>
 			<li><a href="http://kipid.tistory.com/entry/Laniakea-Our-home-supercluster">Laniakea: Our home supercluster</a>, 2014-09-19</li>
 			<li><a href="http://kipid.tistory.com/entry/BICEP2-evidence-of-Inflation-and-Gravitational-wave">BICEP2: 중력파와 급팽창 이론(인플레이션, inflation theory)의 직접적인 증거</a>, 2014-04-07</li>
-			<li><a href="http://kipid.tistory.com/entry/Black-Hole-Mystery-Wrapped-in-Firewall-Paradox">방화벽 역설(Firewall paradox)로 인한 블랙홀 미스테리</a>, 2014-02-10</li>
+			<li><a class="emph" href="http://kipid.tistory.com/entry/Black-Hole-Mystery-Wrapped-in-Firewall-Paradox">방화벽 역설(Firewall paradox)로 인한 블랙홀 미스테리</a>, 2014-02-10</li>
 		</ul>
 		<div class="p"></div>
 	</div>
 	<div class="subsec"><h3 id="sec-Physics-etc">Etc. (기타 물리/수학 관련 잡다한 이야기들.)</h3>
 		<ul>
-			<li><a href="http://kipid.tistory.com/entry/Physicist-Quotations">물리학자들의 명언(名言)들 (Physicist Quotations)</a>, 2014-03-04</li>
+			<li><a class="emph" href="http://kipid.tistory.com/entry/Physicist-Quotations">물리학자들의 명언(名言)들 (Physicist Quotations)</a>, 2014-03-04</li>
 			<li><a href="http://kipid.tistory.com/entry/Skepticism-about-String-theory">초끈이론 회의론 (Skepticism about String theory)</a>, 2014-02-10</li>
 		</ul>
 		<div class="p"></div>
@@ -110,14 +119,14 @@
 	<div class="subsec"><h3 id="sec-IT-HTML">HTML related (HTML, css, javascript 관련 이야기들)</h3>
 		<div class="subsubsec"><h4>DocuK and SEE (Super Easy Edit)</h4>
 			<ul>
-				<li><a href="http://kipid.tistory.com/entry/HTML-docuK-format-ver-20">HTML docuK format ver. 2.0</a>, 2014-04-06</li>
+				<li><a class="emph" href="http://kipid.tistory.com/entry/HTML-docuK-format-ver-20">HTML docuK format ver. 2.0</a>, 2014-04-06</li>
 				<li><a href="http://kipid.tistory.com/entry/docuK-short-copiable-version">HTML docuK format ver. 2.1, short copiable version</a>, 2014-06-13</li>
-				<li><a href="http://kipid.tistory.com/entry/Super-Easy-Edit-SEE-of-docuK">Super Easy Edit (SEE) of docuK</a>, 2014-06-20</li>
-				<li><a href="http://kipid.tistory.com/entry/equations-in-html">인터넷, Web, HTML, 블로그에서 수식 사용하기 (Equation or math in HTML, blog)</a>, 2014-04-20</li>
-				<li><a href="http://kipid.tistory.com/entry/Syntax-Highlighter-in-HTML-google-code-prettify">인터넷에서 예쁘게 코드 입력하기 (google code prettify)</a>, 2014-01-17</li>
+				<li><a class="emph" href="http://kipid.tistory.com/entry/Super-Easy-Edit-SEE-of-docuK">Super Easy Edit (SEE) of docuK</a>, 2014-06-20</li>
+				<li><a class="emph" href="http://kipid.tistory.com/entry/equations-in-html">인터넷, Web, HTML, 블로그에서 수식 사용하기 (Equation or math in HTML, blog)</a>, 2014-04-20</li>
+				<li><a class="emph" href="http://kipid.tistory.com/entry/Syntax-Highlighter-in-HTML-google-code-prettify">인터넷에서 예쁘게 코드 입력하기 (google code prettify)</a>, 2014-01-17</li>
 				<li><a href="http://kipid.tistory.com/entry/Citing-the-references-automatically-in-HTML-like-LaTeX">Citing the references automatically in HTML (like LaTeX)</a>, 2014-03-02</li>
 				<li><a href="http://kipid.tistory.com/entry/introducing-LaTeX-and-Guides">LaTeX(라텍스, 레이텍) 소개 및 설명서(Guide)들</a>, 2014-03-24</li>
-				<li><a href="http://kipid.tistory.com/entry/Delayed-Loading-in-HTML-by-JavaScript-jQuery">Delayed Loading in HTML by JavaScript (+jQuery)</a>, 2014-05-29</li>
+				<li><a class="emph" href="http://kipid.tistory.com/entry/Delayed-Loading-in-HTML-by-JavaScript-jQuery">Delayed Loading in HTML by JavaScript (+jQuery)</a>, 2014-05-29</li>
 				<li><a href="http://kipid.tistory.com/entry/Customized-styling-of-scroll-bars-in-HTML">Customized styling of scroll bars in HTML</a>, 2014-05-26</li>
 				<li><a href="http://kipid.tistory.com/entry/Getting-Data-from-Google-Spreadsheet">Getting Data from Google Spreadsheet or Excel</a>, 2014-06-13</li>
 				<li><a href="http://kipid.tistory.com/entry/shortkey-in-tistory-or-html">티스토리 단축키 설정 (+단축키 추가/수정하기)</a>, 2014-06-20</li>
@@ -127,15 +136,15 @@
 		
 		<div class="subsubsec"><h4>HTTP Server and Javascript</h4>
 			<ul>
-				<li><a href="http://kipid.tistory.com/entry/HTTP-Cookie-in-Web-HTML-Javascript-and-Server">HTTP Cookie in Web / HTML / Javascript and Server</a>, 2014-08-31</li>
+				<li><a class="emph" href="http://kipid.tistory.com/entry/HTTP-Cookie-in-Web-HTML-Javascript-and-Server">HTTP Cookie in Web / HTML / Javascript and Server</a>, 2014-08-31</li>
 				<li><a href="http://kipid.tistory.com/entry/Installing-and-Learning-JAVA">Installing and Learning JAVA</a>, 2014-06-10</li>
 				<li><a href="http://kipid.tistory.com/entry/Learning-Vertx">Learning Vert.x</a>, 2014-05-23</li>
 				<li><a href="http://kipid.tistory.com/entry/Learning-PHP">Learning PHP</a>, 2014-05-22</li>
 				<li><a href="http://kipid.tistory.com/entry/Learning-Nodejs">Learning Node.js</a>, 2014-05-22</li>
 				<li><a href="http://kipid.tistory.com/entry/Learning-AJAX">Learning AJAX</a>, 2014-06-02</li>
-				<li><a href="http://kipid.tistory.com/entry/Learning-JavaScript">Learning JavaScript, especially class-like Constructor function and Property Inheritance through prototype/__proto__ chaining</a>, 2014-05-21</li>
+				<li><a class="emph" href="http://kipid.tistory.com/entry/Learning-JavaScript">Learning JavaScript, especially class-like Constructor function and Property Inheritance through prototype/__proto__ chaining</a>, 2014-05-21</li>
 				<li><a href="http://kipid.tistory.com/entry/Regular-Expression-and-match-replace-method-in-javascript">Regular Expression (정규 표현식), and match/replace method in javascript</a>, 2014-05-03</li>
-				<li><a href="http://kipid.tistory.com/entry/Javascript-namespace-or-encapsulation">Javascript namespace or encapsulation</a>, 2014-06-03</li>
+				<li><a class="emph" href="http://kipid.tistory.com/entry/Javascript-namespace-or-encapsulation">Javascript namespace or encapsulation</a>, 2014-06-03</li>
 			</ul>
 		</div><!-- subsubsec : HTTP Server -->
 		<div class="p"></div>
@@ -163,7 +172,7 @@
 			<li><a href="http://kipid.tistory.com/entry/Machine-Learning">기계 학습 (Machine Learning)</a>, 2014-04-28</li>
 			<li><a href="http://kipid.tistory.com/entry/Sorting-Algorithm">정렬법 (Sorting Algorithm)</a>, 2014-02-10</li>
 			<li><a href="http://kipid.tistory.com/entry/Hash-Table-and-Hash-function">Hash Table and Hash function</a>, 2014-02-10</li>
-			<li><a href="http://kipid.tistory.com/entry/Studying-SQL-Structured-Query-Language">SQL(Structured Query Language)을 배워보자</a>, 2014-03-06</li>
+			<li><a class="emph" href="http://kipid.tistory.com/entry/Studying-SQL-Structured-Query-Language">SQL (Structured Query Language) 을 배워보자</a>, 2014-03-06</li>
 		</ul>
 		<div class="p"></div>
 	</div>
@@ -182,18 +191,18 @@
 <div class="sec"><h2 class="no-sec-N" id="sec-SPE">[사회/정치/경제] Category</h2>
 	<div class="subsec"><h3 id="sec-History">국사 (대한민국 역사)</h3>
 		<ul>
-			<li><a href="http://kipid.tistory.com/entry/%EA%B5%AD%EC%82%AC-%EC%A0%95%EB%A6%AC%ED%95%B4-%EB%86%93%EC%9D%80-%EA%B2%83">국사 정리해 놓은 것</a>, 2014-03-09</li>
-			<li><a href="http://kipid.tistory.com/entry/%EB%8C%80%ED%95%9C%EB%AF%BC%EA%B5%AD-%ED%97%8C%EB%B2%95-%EC%A0%84%EB%AC%B8">대한민국 헌법 전문</a>, 2014-03-06</li>
+			<li><a class="emph" href="http://kipid.tistory.com/entry/%EA%B5%AD%EC%82%AC-%EC%A0%95%EB%A6%AC%ED%95%B4-%EB%86%93%EC%9D%80-%EA%B2%83">국사 정리해 놓은 것</a>, 2014-03-09</li>
+			<li><a class="emph" href="http://kipid.tistory.com/entry/%EB%8C%80%ED%95%9C%EB%AF%BC%EA%B5%AD-%ED%97%8C%EB%B2%95-%EC%A0%84%EB%AC%B8">대한민국 헌법 전문</a>, 2014-03-06</li>
 			<li><a href="http://kipid.tistory.com/entry/%EC%A0%95%EB%8F%84%EC%A0%84-%EA%B4%80%EB%A0%A8-%EC%97%AD%EC%82%AC-%EC%A0%95%EB%A6%AC">정도전 관련 역사 정리</a>, 2014-06-14</li>
 		</ul>
 		<div class="p"></div>
 	</div>
 	<div class="subsec"><h3 id="sec-Economy">경제</h3>
 		<ul>
-			<li><a href="http://kipid.tistory.com/entry/%EA%B3%B5%EC%A0%95%ED%95%9C-%EA%B2%BD%EC%A0%9C%EB%9E%80-%EB%AC%B4%EC%97%87%EC%9D%BC%EA%B0%80-1-%EB%91%90-%EB%AA%85%EB%A7%8C%EC%9C%BC%EB%A1%9C-%EA%B5%AC%EC%84%B1%EB%90%9C-%EC%82%AC%ED%9A%8C%EC%97%90%EC%84%9C%EC%9D%98-%EA%B2%BD%EC%A0%9C%EC%84%B1%EC%9E%A5">공정한 경제란 무엇일까? - 1. 두 명만으로 구성된 사회에서의 경제성장</a>, 2014-02-15</li>
-			<li><a href="http://kipid.tistory.com/entry/how-rich-are-you">당신은 상위 몇 % 입니까? (고위직 재산 통계 2013)</a>, 2014-01-21</li>
+			<li><a class="emph" href="http://kipid.tistory.com/entry/%EA%B3%B5%EC%A0%95%ED%95%9C-%EA%B2%BD%EC%A0%9C%EB%9E%80-%EB%AC%B4%EC%97%87%EC%9D%BC%EA%B0%80-1-%EB%91%90-%EB%AA%85%EB%A7%8C%EC%9C%BC%EB%A1%9C-%EA%B5%AC%EC%84%B1%EB%90%9C-%EC%82%AC%ED%9A%8C%EC%97%90%EC%84%9C%EC%9D%98-%EA%B2%BD%EC%A0%9C%EC%84%B1%EC%9E%A5">공정한 경제란 무엇일까? - 1. 두 명만으로 구성된 사회에서의 경제성장</a>, 2014-02-15</li>
+			<li><a class="emph" href="http://kipid.tistory.com/entry/how-rich-are-you">당신은 상위 몇 % 입니까? (고위직 재산 통계 2013)</a>, 2014-01-21</li>
 			<li><a href="http://kipid.tistory.com/entry/government-officials-property">고위공직자 및 국회의원 정기 재산 신고 사항 (2011~2014)</a>, 2014-03-29</li>
-			<li><a href="http://kipid.tistory.com/entry/%EC%A7%80%EA%B5%AC%EB%8A%94-%EC%96%B4%EB%8A%90%EC%A0%95%EB%8F%84%EC%9D%98-%EC%9D%B8%EA%B5%AC%EC%88%98%EA%B9%8C%EC%A7%80-%EC%88%98%EC%9A%A9%EA%B0%80%EB%8A%A5%ED%95%A0%EA%B9%8C">지구는 어느정도의 인구수까지 수용가능할까?</a>, 2014-04-12</li>
+			<li><a class="emph" href="http://kipid.tistory.com/entry/%EC%A7%80%EA%B5%AC%EB%8A%94-%EC%96%B4%EB%8A%90%EC%A0%95%EB%8F%84%EC%9D%98-%EC%9D%B8%EA%B5%AC%EC%88%98%EA%B9%8C%EC%A7%80-%EC%88%98%EC%9A%A9%EA%B0%80%EB%8A%A5%ED%95%A0%EA%B9%8C">지구는 어느정도의 인구수까지 수용가능할까?</a>, 2014-04-12</li>
 			<li><a href="http://kipid.tistory.com/entry/%EC%8A%A4%EB%A7%88%ED%8A%B8-%EC%A7%80%EA%B0%91-Smart-wallet-Apple-pay-Google-wallet-%EB%93%B1-%EC%9D%80-%EC%96%B4%EB%8A%90-%EB%B0%A9%ED%96%A5%EC%9C%BC%EB%A1%9C-%EB%B0%9C%EC%A0%84%ED%95%A0%EA%B9%8C">스마트 지갑 (Smart wallet: Apple pay, Google wallet 등) 은 어느 방향으로 발전할까?</a>, 2014-11-11</li>
 		</ul>
 		<div class="p"></div>
@@ -202,6 +211,7 @@
 		<ul>
 			<li><a href="http://kipid.tistory.com/entry/what-is-justice">정의란 무엇인가? - 1강 벤담의 공리주의</a>, 2014-01-22</li>
 			<li><a href="http://kipid.tistory.com/entry/Philosophy-of-Success">성공이란 무엇일까? (Philosophy of Success)</a>, 2014-03-23</li>
+			<li><a href="http://kipid.tistory.com/entry/%EA%B3%A0%ED%86%B5%EC%97%86%EC%9D%B4-%EC%A3%BD%EB%8A%94-%EB%B0%A9%EB%B2%95-%EC%95%88%EB%9D%BD%EC%82%AC-%EB%B0%A9%EB%B2%95-%EC%9E%90%EC%82%B4%ED%95%A0-%EA%B6%8C%EB%A6%AC">고통없이 죽는 방법 (안락사 방법), 자살할 권리</a>, 2014-11-21</li>
 		</ul>
 		<div class="p"></div>
 	</div>
@@ -221,7 +231,7 @@
 			<li><a href="http://kipid.tistory.com/entry/%EC%84%B8%EC%9B%94%ED%98%B8-%EC%B9%A8%EB%AA%B0%EC%82%AC%EA%B3%A0">세월호 침몰사고</a>, 2014-04-22; 사고는 2014년 4월 16일 8시 48분 경 대한민국 전라남도 진도군 조도면 부근 황해 상에서 발생.</li>
 			<li><a href="http://kipid.tistory.com/entry/%EA%B9%80%EC%96%B4%EC%A4%80%EC%9D%98-KFC1-%EC%96%B4%EC%A4%80%EC%9D%98-%EA%B7%80%ED%99%98">[김어준의 KFC#1] 어준의 귀환! "닭을 열심히 튀기겠습니다"</a>, 2014-03-17; 주로 "국정원, 서울시 공무원 간첩 증거조작 사건"과 "월세 과세 정책의 진실?"를 다뤘음.</li>
 			<li><a href="http://kipid.tistory.com/entry/NIS-cheating">2012~2013 대한민국 국가정보원 (국정원, NIS) 여론 조작 사건</a>, 2014-02-11</li>
-			<li><a href="http://kipid.tistory.com/entry/criminal-investigation-NIS-cheating">국정원 대선개입 수사 - 서울경찰청 사이버 범죄수사대 디지털 증거분석실 CCTV 녹취록</a>, 2014-06-22</li>
+			<li><a class="emph" href="http://kipid.tistory.com/entry/criminal-investigation-NIS-cheating">국정원 대선개입 수사 - 서울경찰청 사이버 범죄수사대 디지털 증거분석실 CCTV 녹취록</a>, 2014-06-22</li>
 		</ul>
 		<div class="p"></div>
 	</div>
@@ -229,8 +239,9 @@
 
 <div class="sec"><h2 class="no-sec-N" id="sec-Break">[Music/Break] Category</h2>
 	<ul>
+		<li><a class="emph" href="http://kipid.tistory.com/entry/Personal-selection-of-music">Personal selection of Musics</a>, 2014-03-20</li>
+		<li><a class="emph" href="http://kipid.tistory.com/entry/Personal-selection-of-Dances-Performances">Personal selection of Dances/Performances</a>, 2014-11-26</li>
 		<li><a href="http://kipid.tistory.com/entry/2014-FIFA-Brazil-World-Cup">2014 FIFA 브라질 월드컵 (2014 FIFA Brazil World Cup)</a>, 2014-06-14</li>
-		<li><a href="http://kipid.tistory.com/entry/Personal-selection-of-music">Personal selection of music</a>, 2014-03-20</li>
 		<li><a href="http://kipid.tistory.com/entry/2014-Sochi-Olympic-Figure-skating">2014 소치 올림픽 - 피겨 스케이팅 (2014 Sochi Olympic - Figure skating)</a>, 2014-02-22</li>
 		<li><a href="http://kipid.tistory.com/entry/%EB%8C%80%ED%95%9C%EB%AF%BC%EA%B5%AD-2014-%EB%8F%99%EA%B3%84%EC%98%AC%EB%A6%BC%ED%94%BD-%EA%B5%AD%EA%B0%80%EB%8C%80%ED%91%9C%EC%84%A0%EC%88%98%EB%8B%A8-%ED%8A%B8%EC%9C%84%ED%84%B0-%EB%AA%A8%EC%9D%8C">대한민국 2014 동계올림픽 국가대표선수단 트위터 모음</a>, 2014-02-19</li>
 		<li><a href="http://kipid.tistory.com/entry/%EB%AC%B4%ED%95%9C%EB%8F%84%EC%A0%84-%EC%9E%90%EC%9C%A0%EB%A1%9C-%EA%B0%80%EC%9A%94%EC%A0%9C-2013-11-02">무한도전 자유로 가요제 (2013-11-02)</a>, 2014-02-15</li>
