--- a/Lists.html
+++ b/Lists.html
@@ -28,6 +28,8 @@
 
 <div class="sec"><h2 class="no-sec-N" id="sec-Newest">Newest posts</h2>
 	<ul>
+		<li><a href="http://kipid.tistory.com/entry/2014-MAMA-in-HONG-KONG">2014 MAMA in HONG KONG</a>, 2014-12-05</li>
+		<li><a href="http://kipid.tistory.com/entry/%EB%8F%99%EC%84%B1%EC%95%A0-LGBT-%EA%B4%80%EB%A0%A8-%EA%B0%9C%EC%9D%B8%EC%9D%98%EA%B2%AC">동성애, LGBT 관련 개인의견</a>, 2014-12-05</li>
 		<li><a href="http://kipid.tistory.com/entry/Personal-selection-of-Dances-Performances">Personal selection of Dances/Performances</a>, 2014-11-26</li>
 		<li><a href="http://kipid.tistory.com/entry/Introducing-what-we-are-making-Recoevenet">Introducing what we are making : Recoeve.net</a>, 2014-11-21</li>
 		<li><a href="http://kipid.tistory.com/entry/%EB%B6%80%EC%B1%84%EC%A3%BC%EB%8F%84-%EC%84%B1%EC%9E%A5%EC%97%90%EC%84%9C-%EC%86%8C%EB%93%9D%EC%A3%BC%EB%8F%84-%EC%84%B1%EC%9E%A5%EC%9C%BC%EB%A1%9C">부채주도 성장에서 소득주도 성장으로</a>, 2014-11-14</li>
@@ -212,6 +214,7 @@
 			<li><a href="http://kipid.tistory.com/entry/what-is-justice">정의란 무엇인가? - 1강 벤담의 공리주의</a>, 2014-01-22</li>
 			<li><a href="http://kipid.tistory.com/entry/Philosophy-of-Success">성공이란 무엇일까? (Philosophy of Success)</a>, 2014-03-23</li>
 			<li><a href="http://kipid.tistory.com/entry/%EA%B3%A0%ED%86%B5%EC%97%86%EC%9D%B4-%EC%A3%BD%EB%8A%94-%EB%B0%A9%EB%B2%95-%EC%95%88%EB%9D%BD%EC%82%AC-%EB%B0%A9%EB%B2%95-%EC%9E%90%EC%82%B4%ED%95%A0-%EA%B6%8C%EB%A6%AC">고통없이 죽는 방법 (안락사 방법), 자살할 권리</a>, 2014-11-21</li>
+			<li><a href="http://kipid.tistory.com/entry/%EB%8F%99%EC%84%B1%EC%95%A0-LGBT-%EA%B4%80%EB%A0%A8-%EA%B0%9C%EC%9D%B8%EC%9D%98%EA%B2%AC">동성애, LGBT 관련 개인의견</a>, 2014-12-05</li>
 		</ul>
 		<div class="p"></div>
 	</div>
@@ -239,6 +242,7 @@
 
 <div class="sec"><h2 class="no-sec-N" id="sec-Break">[Music/Break] Category</h2>
 	<ul>
+		<li><a href="http://kipid.tistory.com/entry/2014-MAMA-in-HONG-KONG">2014 MAMA in HONG KONG</a>, 2014-12-05</li>
 		<li><a class="emph" href="http://kipid.tistory.com/entry/Personal-selection-of-music">Personal selection of Musics</a>, 2014-03-20</li>
 		<li><a class="emph" href="http://kipid.tistory.com/entry/Personal-selection-of-Dances-Performances">Personal selection of Dances/Performances</a>, 2014-11-26</li>
 		<li><a href="http://kipid.tistory.com/entry/2014-FIFA-Brazil-World-Cup">2014 FIFA 브라질 월드컵 (2014 FIFA Brazil World Cup)</a>, 2014-06-14</li>
@@ -276,7 +280,6 @@ MathJax.Hub.Config({
 	}
 });
 </script>
-<script src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" defer></script>
 <!-- <script src="docuK-postProcess-2.2.js"></script> -->
 <!-- From kipid.tistory CDN -->
 <script src="http://cfs.tistory.com/custom/blog/146/1468360/skin/images/docuK-postProcess-2.2.js"></script>
