--- a/Lists.html
+++ b/Lists.html
@@ -28,6 +28,11 @@
 
 <div class="sec"><h2 class="no-sec-N" id="sec-Newest">Newest posts</h2>
 	<ul>
+		<li><a href="http://kipid.tistory.com/entry/Truncated-manybody-dynamics-of-interacting-bosons-A-variational-principle-with-error-monitoring">Truncated many-body dynamics of interacting bosons: A variational principle with error monitoring</a>, 2014-12-17</li>
+		<li><a href="http://kipid.tistory.com/entry/%EB%B3%B8%EC%9D%B8-%EC%B1%85%EC%9D%84-%ED%86%B5%ED%95%B4-%EB%B0%94%EB%9D%BC%EB%B3%B8-37%EC%84%B8%EC%9D%98-%EB%B0%95%EA%B7%BC%ED%98%9C">본인 책을 통해 바라본 37세의 박근혜</a>, 2014-12-16</li>
+		<li><a href="http://kipid.tistory.com/entry/DSP-friends-White-Letter-Christmas-special">DSP friends - White Letter (Christmas special)</a>, 2014-12-15</li>
+		<li><a href="http://kipid.tistory.com/entry/HTML-event-handler">HTML event handler</a>, 2014-12-15</li>
+		<li><a href="http://kipid.tistory.com/entry/%EC%86%8C%EC%8B%9C%EC%98%A4%ED%8C%A8%EC%8A%A4-Sociopaths-%EC%99%80%EB%8A%94-%EC%95%84%EC%98%88-%EC%83%81%EC%A2%85%ED%95%98%EC%A7%80-%EC%95%8A%EB%8A%94-%EA%B2%83%EC%9D%B4-%EC%A2%8B%EB%8B%A4">소시오패스 (Sociopaths) 와는 아예 상종하지 않는 것이 좋다.</a>, 2014-12-11</li>
 		<li><a href="http://kipid.tistory.com/entry/2014-MAMA-in-HONG-KONG">2014 MAMA in HONG KONG</a>, 2014-12-05</li>
 		<li><a href="http://kipid.tistory.com/entry/%EB%8F%99%EC%84%B1%EC%95%A0-LGBT-%EA%B4%80%EB%A0%A8-%EA%B0%9C%EC%9D%B8%EC%9D%98%EA%B2%AC">동성애, LGBT 관련 개인의견</a>, 2014-12-05</li>
 		<li><a href="http://kipid.tistory.com/entry/Personal-selection-of-Dances-Performances">Personal selection of Dances/Performances</a>, 2014-11-26</li>
@@ -75,6 +80,7 @@
 		<ul>
 			<li><a href="http://kipid.tistory.com/entry/Quantum-Mechanics">양자역학 (Quantum Mechanics)</a>, 2014-04-24</li>
 			<li><a href="http://kipid.tistory.com/entry/Decoherence-the-Measurement-Problem-of-Quantum-Mechanics">Decoherence, the Measurement Problem of Quantum Mechanics</a>, 2014-07-29</li>
+			<li><a href="http://kipid.tistory.com/entry/Truncated-manybody-dynamics-of-interacting-bosons-A-variational-principle-with-error-monitoring">Truncated many-body dynamics of interacting bosons: A variational principle with error monitoring</a>, 2014-12-17</li>
 		</ul>
 		<div class="p"></div>
 		<ul>
@@ -132,6 +138,7 @@
 				<li><a href="http://kipid.tistory.com/entry/Customized-styling-of-scroll-bars-in-HTML">Customized styling of scroll bars in HTML</a>, 2014-05-26</li>
 				<li><a href="http://kipid.tistory.com/entry/Getting-Data-from-Google-Spreadsheet">Getting Data from Google Spreadsheet or Excel</a>, 2014-06-13</li>
 				<li><a href="http://kipid.tistory.com/entry/shortkey-in-tistory-or-html">티스토리 단축키 설정 (+단축키 추가/수정하기)</a>, 2014-06-20</li>
+				<li><a href="http://kipid.tistory.com/entry/HTML-event-handler">HTML event handler</a>, 2014-12-15</li>
 			</ul>
 		</div><!-- subsubsec : DocuK and SEE (Super Easy Edit) -->
 		<div class="p"></div>
@@ -206,6 +213,7 @@
 			<li><a href="http://kipid.tistory.com/entry/government-officials-property">고위공직자 및 국회의원 정기 재산 신고 사항 (2011~2014)</a>, 2014-03-29</li>
 			<li><a class="emph" href="http://kipid.tistory.com/entry/%EC%A7%80%EA%B5%AC%EB%8A%94-%EC%96%B4%EB%8A%90%EC%A0%95%EB%8F%84%EC%9D%98-%EC%9D%B8%EA%B5%AC%EC%88%98%EA%B9%8C%EC%A7%80-%EC%88%98%EC%9A%A9%EA%B0%80%EB%8A%A5%ED%95%A0%EA%B9%8C">지구는 어느정도의 인구수까지 수용가능할까?</a>, 2014-04-12</li>
 			<li><a href="http://kipid.tistory.com/entry/%EC%8A%A4%EB%A7%88%ED%8A%B8-%EC%A7%80%EA%B0%91-Smart-wallet-Apple-pay-Google-wallet-%EB%93%B1-%EC%9D%80-%EC%96%B4%EB%8A%90-%EB%B0%A9%ED%96%A5%EC%9C%BC%EB%A1%9C-%EB%B0%9C%EC%A0%84%ED%95%A0%EA%B9%8C">스마트 지갑 (Smart wallet: Apple pay, Google wallet 등) 은 어느 방향으로 발전할까?</a>, 2014-11-11</li>
+			<li><a href="http://kipid.tistory.com/entry/%EC%9D%98%EB%A3%8C-%ED%8C%8C%EC%97%85-%EA%B4%80%EB%A0%A8">의료 파업 및 의료 영리화, 원격진료. 외부에서 본 개인의견</a>, 2014-03-22</li>
 		</ul>
 		<div class="p"></div>
 	</div>
@@ -215,17 +223,18 @@
 			<li><a href="http://kipid.tistory.com/entry/Philosophy-of-Success">성공이란 무엇일까? (Philosophy of Success)</a>, 2014-03-23</li>
 			<li><a href="http://kipid.tistory.com/entry/%EA%B3%A0%ED%86%B5%EC%97%86%EC%9D%B4-%EC%A3%BD%EB%8A%94-%EB%B0%A9%EB%B2%95-%EC%95%88%EB%9D%BD%EC%82%AC-%EB%B0%A9%EB%B2%95-%EC%9E%90%EC%82%B4%ED%95%A0-%EA%B6%8C%EB%A6%AC">고통없이 죽는 방법 (안락사 방법), 자살할 권리</a>, 2014-11-21</li>
 			<li><a href="http://kipid.tistory.com/entry/%EB%8F%99%EC%84%B1%EC%95%A0-LGBT-%EA%B4%80%EB%A0%A8-%EA%B0%9C%EC%9D%B8%EC%9D%98%EA%B2%AC">동성애, LGBT 관련 개인의견</a>, 2014-12-05</li>
+			<li><a href="http://kipid.tistory.com/entry/%EC%86%8C%EC%8B%9C%EC%98%A4%ED%8C%A8%EC%8A%A4-Sociopaths-%EC%99%80%EB%8A%94-%EC%95%84%EC%98%88-%EC%83%81%EC%A2%85%ED%95%98%EC%A7%80-%EC%95%8A%EB%8A%94-%EA%B2%83%EC%9D%B4-%EC%A2%8B%EB%8B%A4">소시오패스 (Sociopaths) 와는 아예 상종하지 않는 것이 좋다.</a>, 2014-12-11</li>
 		</ul>
 		<div class="p"></div>
 	</div>
 	<div class="subsec"><h3 id="sec-Politics">정치</h3>
 		<ul>
+			<li><a href="http://kipid.tistory.com/entry/%EB%AC%B8%EC%9E%AC%EC%9D%B8%E6%96%87%E5%9C%A8%E5%AF%85-vs-%EB%B0%95%EA%B7%BC%ED%98%9C%E6%9C%B4%E6%A7%BF%E6%83%A0-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">문재인(文在寅) vs 박근혜(朴槿惠) 프로필 비교</a>, 2014-03-17</li>
+			<li><a href="http://kipid.tistory.com/entry/%EB%B3%B8%EC%9D%B8-%EC%B1%85%EC%9D%84-%ED%86%B5%ED%95%B4-%EB%B0%94%EB%9D%BC%EB%B3%B8-37%EC%84%B8%EC%9D%98-%EB%B0%95%EA%B7%BC%ED%98%9C">본인 책을 통해 바라본 37세의 박근혜</a>, 2014-12-16</li>
+			<li><a href="http://kipid.tistory.com/entry/%EB%B0%95%EC%9B%90%EC%88%9C%E6%9C%B4%E5%85%83%E6%B7%B3-vs-%EC%A0%95%EB%AA%BD%EC%A4%80%E9%84%AD%E5%A4%A2%E6%BA%96-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">박원순(朴元淳) vs 정몽준(鄭夢準) 프로필 비교</a>, 2014-05-25</li>
 			<li><a href="http://kipid.tistory.com/entry/%EB%85%B8%ED%9A%8C%EC%B0%AC%E9%AD%AF%E6%9C%83%E7%87%A6-vs-%EB%82%98%EA%B2%BD%EC%9B%90%E7%BE%85%E5%8D%BF%E7%91%97-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">노회찬(魯會燦) vs 나경원(羅卿瑗) 프로필 비교</a>, 2014-07-24</li>
 			<li><a href="http://kipid.tistory.com/entry/201406-%EC%A0%95%EB%B6%80%EA%B0%9C%EA%B0%81-%EC%9E%A5%EA%B4%80-%EB%B0%8F-%EA%B0%81-%ED%9B%84%EB%B3%B4%EB%93%A4-%ED%94%84%EB%A1%9C%ED%95%84-%EB%AA%A8%EC%9D%8C">2014-06 정부개각, 장관 및 각 후보들 프로필 모음</a>, 2014-06-23</li>
 			<li><a href="http://kipid.tistory.com/entry/2014-%EC%B4%9D%EB%A6%AC%ED%9B%84%EB%B3%B4-%EB%AC%B8%EC%B0%BD%EA%B7%B9-vs-%EC%95%88%EB%8C%80%ED%9D%AC-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">2014 총리후보, 문창극(文昌克) vs 안대희(安大熙) 프로필 비교</a>, 2014-06-14</li>
-			<li><a href="http://kipid.tistory.com/entry/%EB%B0%95%EC%9B%90%EC%88%9C%E6%9C%B4%E5%85%83%E6%B7%B3-vs-%EC%A0%95%EB%AA%BD%EC%A4%80%E9%84%AD%E5%A4%A2%E6%BA%96-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">박원순(朴元淳) vs 정몽준(鄭夢準) 프로필 비교</a>, 2014-05-25</li>
-			<li><a href="http://kipid.tistory.com/entry/%EC%9D%98%EB%A3%8C-%ED%8C%8C%EC%97%85-%EA%B4%80%EB%A0%A8">의료 파업 및 의료 영리화, 원격진료. 외부에서 본 개인의견</a>, 2014-03-22</li>
-			<li><a href="http://kipid.tistory.com/entry/%EB%AC%B8%EC%9E%AC%EC%9D%B8%E6%96%87%E5%9C%A8%E5%AF%85-vs-%EB%B0%95%EA%B7%BC%ED%98%9C%E6%9C%B4%E6%A7%BF%E6%83%A0-%ED%94%84%EB%A1%9C%ED%95%84-%EB%B9%84%EA%B5%90">문재인(文在寅) vs 박근혜(朴槿惠) 프로필 비교</a>, 2014-03-17</li>
 		</ul>
 		<div class="p"></div>
 	</div>
@@ -242,6 +251,7 @@
 
 <div class="sec"><h2 class="no-sec-N" id="sec-Break">[Music/Break] Category</h2>
 	<ul>
+		<li><a href="http://kipid.tistory.com/entry/DSP-friends-White-Letter-Christmas-special">DSP friends - White Letter (Christmas special)</a>, 2014-12-15</li>
 		<li><a href="http://kipid.tistory.com/entry/2014-MAMA-in-HONG-KONG">2014 MAMA in HONG KONG</a>, 2014-12-05</li>
 		<li><a class="emph" href="http://kipid.tistory.com/entry/Personal-selection-of-music">Personal selection of Musics</a>, 2014-03-20</li>
 		<li><a class="emph" href="http://kipid.tistory.com/entry/Personal-selection-of-Dances-Performances">Personal selection of Dances/Performances</a>, 2014-11-26</li>
