--- a/skin.html
+++ b/skin.html
@@ -437,8 +437,8 @@
 				<s_sidebar_element>
 				<!-- 최근 댓글 모듈 -->
 				<div id="recentComment">
-					<h3 id="recentComments">최근에 달린 댓글</h3>
-					<ul>
+					<h3>최근에 달린 댓글</h3>
+					<ul id="recentComments">
 						<s_rctrp_rep>
 						<li>
 							<a href="[##_rctrp_rep_link_##]">[##_rctrp_rep_desc_##].</a>
