--- a/Lists.html
+++ b/Lists.html
@@ -28,6 +28,9 @@
 
 <div class="sec"><h2 class="no-sec-N" id="sec-Newest">Newest posts</h2>
 	<ul>
+		<li><a href="http://kipid.tistory.com/entry/%EC%9B%90%EC%9E%90%EB%A0%A5-%EB%B0%9C%EC%A0%84%EC%86%8C%EC%99%80-%EB%B0%A9%EC%82%AC%EC%84%A0-%EA%B7%B8%EB%A6%AC%EA%B3%A0-%EC%95%88%EC%A0%84%EA%B0%90%EC%8B%9C-%EC%8B%9C%EC%8A%A4%ED%85%9C">원자력 발전소와 방사선, 그리고 안전/감시 시스템</a>, 2014-12-23</li>
+		<li><a href="http://kipid.tistory.com/entry/Data-ENCRYPT">Data ENCRYPT (정보 암호화)</a>, 2014-12-21</li>
+		<li><a href="http://kipid.tistory.com/entry/Number-and-Bit-operations-in-JAVA-and-Javascript">Number and Bit operations in JAVA and Javascript</a>, 2014-12-21</li>
 		<li><a href="http://kipid.tistory.com/entry/Truncated-manybody-dynamics-of-interacting-bosons-A-variational-principle-with-error-monitoring">Truncated many-body dynamics of interacting bosons: A variational principle with error monitoring</a>, 2014-12-17</li>
 		<li><a href="http://kipid.tistory.com/entry/%EB%B3%B8%EC%9D%B8-%EC%B1%85%EC%9D%84-%ED%86%B5%ED%95%B4-%EB%B0%94%EB%9D%BC%EB%B3%B8-37%EC%84%B8%EC%9D%98-%EB%B0%95%EA%B7%BC%ED%98%9C">본인 책을 통해 바라본 37세의 박근혜</a>, 2014-12-16</li>
 		<li><a href="http://kipid.tistory.com/entry/DSP-friends-White-Letter-Christmas-special">DSP friends - White Letter (Christmas special)</a>, 2014-12-15</li>
@@ -39,7 +42,7 @@
 		<li><a href="http://kipid.tistory.com/entry/Introducing-what-we-are-making-Recoevenet">Introducing what we are making : Recoeve.net</a>, 2014-11-21</li>
 		<li><a href="http://kipid.tistory.com/entry/%EB%B6%80%EC%B1%84%EC%A3%BC%EB%8F%84-%EC%84%B1%EC%9E%A5%EC%97%90%EC%84%9C-%EC%86%8C%EB%93%9D%EC%A3%BC%EB%8F%84-%EC%84%B1%EC%9E%A5%EC%9C%BC%EB%A1%9C">부채주도 성장에서 소득주도 성장으로</a>, 2014-11-14</li>
 		<li><a href="http://kipid.tistory.com/entry/%EC%8A%A4%EB%A7%88%ED%8A%B8-%EC%A7%80%EA%B0%91-Smart-wallet-Apple-pay-Google-wallet-%EB%93%B1-%EC%9D%80-%EC%96%B4%EB%8A%90-%EB%B0%A9%ED%96%A5%EC%9C%BC%EB%A1%9C-%EB%B0%9C%EC%A0%84%ED%95%A0%EA%B9%8C">스마트 지갑 (Smart wallet: Apple pay, Google wallet 등) 은 어느 방향으로 발전할까?</a>, 2014-11-11</li>
-		<li><a href="http://kipid.tistory.com/entry/%EA%B3%A0%ED%86%B5%EC%97%86%EC%9D%B4-%EC%A3%BD%EB%8A%94-%EB%B0%A9%EB%B2%95-%EC%95%88%EB%9D%BD%EC%82%AC-%EB%B0%A9%EB%B2%95-%EC%9E%90%EC%82%B4%ED%95%A0-%EA%B6%8C%EB%A6%AC">고통없이 죽는 방법 (안락사 방법), 자살할 권리</a>, 2014-11-21</li>
+		<!-- <li><a href="http://kipid.tistory.com/entry/%EA%B3%A0%ED%86%B5%EC%97%86%EC%9D%B4-%EC%A3%BD%EB%8A%94-%EB%B0%A9%EB%B2%95-%EC%95%88%EB%9D%BD%EC%82%AC-%EB%B0%A9%EB%B2%95-%EC%9E%90%EC%82%B4%ED%95%A0-%EA%B6%8C%EB%A6%AC">고통없이 죽는 방법 (안락사 방법), 자살할 권리</a>, 2014-11-21</li>
 		<li><a href="http://kipid.tistory.com/entry/Laniakea-Our-home-supercluster">Laniakea: Our home supercluster</a>, 2014-09-19</li>
 		<li><a href="http://kipid.tistory.com/entry/HTTP-Cookie-in-Web-HTML-Javascript-and-Server">HTTP Cookie in Web / HTML / Javascript and Server</a>, 2014-08-31</li>
 		<li><a href="http://kipid.tistory.com/entry/Decoherence-the-Measurement-Problem-of-Quantum-Mechanics">Decoherence, the Measurement Problem of Quantum Mechanics</a>, 2014-07-29</li>
@@ -47,7 +50,7 @@
 		<li><a href="http://kipid.tistory.com/entry/201406-%EC%A0%95%EB%B6%80%EA%B0%9C%EA%B0%81-%EC%9E%A5%EA%B4%80-%EB%B0%8F-%EA%B0%81-%ED%9B%84%EB%B3%B4%EB%93%A4-%ED%94%84%EB%A1%9C%ED%95%84-%EB%AA%A8%EC%9D%8C">2014-06 정부개각, 장관 및 각 후보들 프로필 모음</a>, 2014-06-23</li>
 		<li><a href="http://kipid.tistory.com/entry/criminal-investigation-NIS-cheating">국정원 대선개입 수사 - 서울경찰청 사이버 범죄수사대 디지털 증거분석실 CCTV 녹취록</a>, 2014-06-22</li>
 		<li><a href="http://kipid.tistory.com/entry/shortkey-in-tistory-or-html">티스토리 단축키 설정 (+단축키 추가/수정하기)</a>, 2014-06-20</li>
-		<li><a href="http://kipid.tistory.com/entry/Super-Easy-Edit-SEE-of-docuK">Super Easy Edit (SEE) of docuK</a>, 2014-06-20</li>
+		<li><a href="http://kipid.tistory.com/entry/Super-Easy-Edit-SEE-of-docuK">Super Easy Edit (SEE) of docuK</a>, 2014-06-20</li> -->
 	</ul>
 </div>
 
@@ -145,6 +148,7 @@
 		
 		<div class="subsubsec"><h4>HTTP Server and Javascript</h4>
 			<ul>
+				<li><a href="http://kipid.tistory.com/entry/Number-and-Bit-operations-in-JAVA-and-Javascript">Number and Bit operations in JAVA and Javascript</a>, 2014-12-21</li>
 				<li><a class="emph" href="http://kipid.tistory.com/entry/HTTP-Cookie-in-Web-HTML-Javascript-and-Server">HTTP Cookie in Web / HTML / Javascript and Server</a>, 2014-08-31</li>
 				<li><a href="http://kipid.tistory.com/entry/Installing-and-Learning-JAVA">Installing and Learning JAVA</a>, 2014-06-10</li>
 				<li><a href="http://kipid.tistory.com/entry/Learning-Vertx">Learning Vert.x</a>, 2014-05-23</li>
@@ -177,6 +181,7 @@
 	
 	<div class="subsec"><h3 id="sec-IT-Algorithm-Database">Algorithm and Database</h3>
 		<ul>
+			<li><a href="http://kipid.tistory.com/entry/Data-ENCRYPT">Data ENCRYPT (정보 암호화)</a>, 2014-12-21</li>
 			<!-- <li><a href="http://kipid.tistory.com/entry/Personalized-recommendation-system">모든것에 대한 개인화 된 추천과 개인화 된 정리함/보관함 (Personalized Recommendation for Everything, and Self-customized List Box)</a>, 2014-05-02</li> -->
 			<li><a href="http://kipid.tistory.com/entry/Machine-Learning">기계 학습 (Machine Learning)</a>, 2014-04-28</li>
 			<li><a href="http://kipid.tistory.com/entry/Sorting-Algorithm">정렬법 (Sorting Algorithm)</a>, 2014-02-10</li>
@@ -240,6 +245,7 @@
 	</div>
 	<div class="subsec"><h3 id="sec-Accident">사건 사고</h3>
 		<ul>
+			<li><a href="http://kipid.tistory.com/entry/%EC%9B%90%EC%9E%90%EB%A0%A5-%EB%B0%9C%EC%A0%84%EC%86%8C%EC%99%80-%EB%B0%A9%EC%82%AC%EC%84%A0-%EA%B7%B8%EB%A6%AC%EA%B3%A0-%EC%95%88%EC%A0%84%EA%B0%90%EC%8B%9C-%EC%8B%9C%EC%8A%A4%ED%85%9C">원자력 발전소와 방사선, 그리고 안전/감시 시스템</a>, 2014-12-23</li>
 			<li><a href="http://kipid.tistory.com/entry/%EC%84%B8%EC%9B%94%ED%98%B8-%EC%B9%A8%EB%AA%B0%EC%82%AC%EA%B3%A0">세월호 침몰사고</a>, 2014-04-22; 사고는 2014년 4월 16일 8시 48분 경 대한민국 전라남도 진도군 조도면 부근 황해 상에서 발생.</li>
 			<li><a href="http://kipid.tistory.com/entry/%EA%B9%80%EC%96%B4%EC%A4%80%EC%9D%98-KFC1-%EC%96%B4%EC%A4%80%EC%9D%98-%EA%B7%80%ED%99%98">[김어준의 KFC#1] 어준의 귀환! "닭을 열심히 튀기겠습니다"</a>, 2014-03-17; 주로 "국정원, 서울시 공무원 간첩 증거조작 사건"과 "월세 과세 정책의 진실?"를 다뤘음.</li>
 			<li><a href="http://kipid.tistory.com/entry/NIS-cheating">2012~2013 대한민국 국가정보원 (국정원, NIS) 여론 조작 사건</a>, 2014-02-11</li>
