--- a/Lists.html
+++ b/Lists.html
@@ -13,9 +13,9 @@
 </style>
 </codeprint><!-- docuK-style -->
 
+<meta name="description" content="List of posts in kipid's blog" />
 <codeprint id="docuK-docu">
 <div class="docuK">
-<meta name="description" content="List of posts in kipid's blog" />
 <div class="sec"><h1>Lists</h1>
 	<div class="p">블로그 글들 리스트를 정리해 놓은 것입니다. 제목뒤 날짜는 보통 처음 글을 올린 날짜입니다. (올려놓고 꾸준히 업데이트하는 글들이 많아서...) 공들여 작성한 글은 <a id="highlight" href="#highlight" class="emph">highlight</a> 함.</div>
 	<div class="p">
@@ -28,6 +28,11 @@
 
 <div class="sec"><h2 class="no-sec-N" id="sec-Newest">Newest posts</h2>
 	<ul>
+		<li><a href="http://kipid.tistory.com/entry/KARA-HARA-On-and-Off-at-MBC-Music">구하라의 On and Off at MBC Music</a>, 2014-12-30</li>
+		<li><a href="http://kipid.tistory.com/entry/%EC%8B%9C%EB%8C%80%EA%B3%B5%EA%B0%90-%EA%B7%B8%EB%93%A4%EA%B3%BC-%ED%86%B5%ED%95%98%EB%8A%94-%EA%B8%B8-%EC%B2%AD%EB%85%84-%EB%B9%88%EA%B3%A4">시대공감 - 그들과 통하는 길. 청년 빈곤.</a>, 2014-12-29</li>
+		<li><a href="http://kipid.tistory.com/entry/SAF-SBS-Awards-Festival">SAF (SBS Awards Festival) 움짤 모음</a>, 2014-12-28</li>
+		<li><a href="http://kipid.tistory.com/entry/%EC%88%98%EB%A9%B4%EC%9D%98-%EA%B3%BC%ED%95%99-Science-of-Sleeping">수면의 과학 (Science of Sleeping)</a>, 2014-12-28 (미완)</li>
+		<li><a href="http://kipid.tistory.com/entry/Auto-Completion-and-Fuzzy-Search">Auto Completion, and Fuzzy Search</a>, 2014-12-28 (비공개 포스트)</li>
 		<li><a href="http://kipid.tistory.com/entry/%EC%9B%90%EC%9E%90%EB%A0%A5-%EB%B0%9C%EC%A0%84%EC%86%8C%EC%99%80-%EB%B0%A9%EC%82%AC%EC%84%A0-%EA%B7%B8%EB%A6%AC%EA%B3%A0-%EC%95%88%EC%A0%84%EA%B0%90%EC%8B%9C-%EC%8B%9C%EC%8A%A4%ED%85%9C">원자력 발전소와 방사선, 그리고 안전/감시 시스템</a>, 2014-12-23</li>
 		<li><a href="http://kipid.tistory.com/entry/Data-ENCRYPT">Data ENCRYPT (정보 암호화)</a>, 2014-12-21</li>
 		<li><a href="http://kipid.tistory.com/entry/Number-and-Bit-operations-in-JAVA-and-Javascript">Number and Bit operations in JAVA and Javascript</a>, 2014-12-21</li>
@@ -70,6 +75,7 @@
 	<ul>
 		<li><a class="emph" href="http://kipid.tistory.com/entry/Introducing-what-we-are-making-Recoevenet">Introducing what we are making : Recoeve.net</a>, 2014-11-21</li>
 		<li>The rest are hiden for the security reason. And these will be open after 5 years from now. (2020)</li>
+		<li><a href="http://kipid.tistory.com/entry/Auto-Completion-and-Fuzzy-Search">Auto Completion, and Fuzzy Search</a>, 2014-12-28 (비공개 포스트)</li>
 	</ul>
 </div><!-- sec: Recoeve -->
 
@@ -217,6 +223,7 @@
 			<li><a class="emph" href="http://kipid.tistory.com/entry/how-rich-are-you">당신은 상위 몇 % 입니까? (고위직 재산 통계 2013)</a>, 2014-01-21</li>
 			<li><a href="http://kipid.tistory.com/entry/government-officials-property">고위공직자 및 국회의원 정기 재산 신고 사항 (2011~2014)</a>, 2014-03-29</li>
 			<li><a class="emph" href="http://kipid.tistory.com/entry/%EC%A7%80%EA%B5%AC%EB%8A%94-%EC%96%B4%EB%8A%90%EC%A0%95%EB%8F%84%EC%9D%98-%EC%9D%B8%EA%B5%AC%EC%88%98%EA%B9%8C%EC%A7%80-%EC%88%98%EC%9A%A9%EA%B0%80%EB%8A%A5%ED%95%A0%EA%B9%8C">지구는 어느정도의 인구수까지 수용가능할까?</a>, 2014-04-12</li>
+			<li><a href="http://kipid.tistory.com/entry/%EC%8B%9C%EB%8C%80%EA%B3%B5%EA%B0%90-%EA%B7%B8%EB%93%A4%EA%B3%BC-%ED%86%B5%ED%95%98%EB%8A%94-%EA%B8%B8-%EC%B2%AD%EB%85%84-%EB%B9%88%EA%B3%A4">시대공감 - 그들과 통하는 길. 청년 빈곤.</a>, 2014-12-29</li>
 			<li><a href="http://kipid.tistory.com/entry/%EC%8A%A4%EB%A7%88%ED%8A%B8-%EC%A7%80%EA%B0%91-Smart-wallet-Apple-pay-Google-wallet-%EB%93%B1-%EC%9D%80-%EC%96%B4%EB%8A%90-%EB%B0%A9%ED%96%A5%EC%9C%BC%EB%A1%9C-%EB%B0%9C%EC%A0%84%ED%95%A0%EA%B9%8C">스마트 지갑 (Smart wallet: Apple pay, Google wallet 등) 은 어느 방향으로 발전할까?</a>, 2014-11-11</li>
 			<li><a href="http://kipid.tistory.com/entry/%EC%9D%98%EB%A3%8C-%ED%8C%8C%EC%97%85-%EA%B4%80%EB%A0%A8">의료 파업 및 의료 영리화, 원격진료. 외부에서 본 개인의견</a>, 2014-03-22</li>
 		</ul>
@@ -256,18 +263,35 @@
 </div>
 
 <div class="sec"><h2 class="no-sec-N" id="sec-Break">[Music/Break] Category</h2>
-	<ul>
-		<li><a href="http://kipid.tistory.com/entry/DSP-friends-White-Letter-Christmas-special">DSP friends - White Letter (Christmas special)</a>, 2014-12-15</li>
-		<li><a href="http://kipid.tistory.com/entry/2014-MAMA-in-HONG-KONG">2014 MAMA in HONG KONG</a>, 2014-12-05</li>
-		<li><a class="emph" href="http://kipid.tistory.com/entry/Personal-selection-of-music">Personal selection of Musics</a>, 2014-03-20</li>
-		<li><a class="emph" href="http://kipid.tistory.com/entry/Personal-selection-of-Dances-Performances">Personal selection of Dances/Performances</a>, 2014-11-26</li>
-		<li><a href="http://kipid.tistory.com/entry/2014-FIFA-Brazil-World-Cup">2014 FIFA 브라질 월드컵 (2014 FIFA Brazil World Cup)</a>, 2014-06-14</li>
-		<li><a href="http://kipid.tistory.com/entry/2014-Sochi-Olympic-Figure-skating">2014 소치 올림픽 - 피겨 스케이팅 (2014 Sochi Olympic - Figure skating)</a>, 2014-02-22</li>
-		<li><a href="http://kipid.tistory.com/entry/%EB%8C%80%ED%95%9C%EB%AF%BC%EA%B5%AD-2014-%EB%8F%99%EA%B3%84%EC%98%AC%EB%A6%BC%ED%94%BD-%EA%B5%AD%EA%B0%80%EB%8C%80%ED%91%9C%EC%84%A0%EC%88%98%EB%8B%A8-%ED%8A%B8%EC%9C%84%ED%84%B0-%EB%AA%A8%EC%9D%8C">대한민국 2014 동계올림픽 국가대표선수단 트위터 모음</a>, 2014-02-19</li>
-		<li><a href="http://kipid.tistory.com/entry/%EB%AC%B4%ED%95%9C%EB%8F%84%EC%A0%84-%EC%9E%90%EC%9C%A0%EB%A1%9C-%EA%B0%80%EC%9A%94%EC%A0%9C-2013-11-02">무한도전 자유로 가요제 (2013-11-02)</a>, 2014-02-15</li>
-		<li><a href="http://kipid.tistory.com/entry/Benjamin-Button-Letters-to-his-daughter">Benjamin Button - Letters to his daughter</a>, 2014-02-15</li>
-	</ul>
-	<div class="p"></div>
+	<div class="subsec"><h3 id="sec-music-dance">Music and Dance</h3>
+		<ul>
+			<li><a href="http://kipid.tistory.com/entry/DSP-friends-White-Letter-Christmas-special">DSP friends - White Letter (Christmas special)</a>, 2014-12-15</li>
+			<li><a href="http://kipid.tistory.com/entry/2014-MAMA-in-HONG-KONG">2014 MAMA in HONG KONG</a>, 2014-12-05</li>
+			<li><a class="emph" href="http://kipid.tistory.com/entry/Personal-selection-of-music">Personal selection of Musics</a>, 2014-03-20</li>
+			<li><a class="emph" href="http://kipid.tistory.com/entry/Personal-selection-of-Dances-Performances">Personal selection of Dances/Performances</a>, 2014-11-26</li>
+			<li><a href="http://kipid.tistory.com/entry/%EB%AC%B4%ED%95%9C%EB%8F%84%EC%A0%84-%EC%9E%90%EC%9C%A0%EB%A1%9C-%EA%B0%80%EC%9A%94%EC%A0%9C-2013-11-02">무한도전 자유로 가요제 (2013-11-02)</a>, 2014-02-15</li>
+		</ul>
+		<div class="p"></div>
+	</div>
+	
+	<div class="subsec"><h3 id="sec-sports">Sports</h3>
+		<ul>
+			<li><a href="http://kipid.tistory.com/entry/2014-FIFA-Brazil-World-Cup">2014 FIFA 브라질 월드컵 (2014 FIFA Brazil World Cup)</a>, 2014-06-14</li>
+			<li><a href="http://kipid.tistory.com/entry/2014-Sochi-Olympic-Figure-skating">2014 소치 올림픽 - 피겨 스케이팅 (2014 Sochi Olympic - Figure skating)</a>, 2014-02-22</li>
+			<li><a href="http://kipid.tistory.com/entry/%EB%8C%80%ED%95%9C%EB%AF%BC%EA%B5%AD-2014-%EB%8F%99%EA%B3%84%EC%98%AC%EB%A6%BC%ED%94%BD-%EA%B5%AD%EA%B0%80%EB%8C%80%ED%91%9C%EC%84%A0%EC%88%98%EB%8B%A8-%ED%8A%B8%EC%9C%84%ED%84%B0-%EB%AA%A8%EC%9D%8C">대한민국 2014 동계올림픽 국가대표선수단 트위터 모음</a>, 2014-02-19</li>
+		</ul>
+		<div class="p"></div>
+	</div>
+	
+	<div class="subsec"><h3>Etc.</h3>
+		<ul>
+			<li><a href="http://kipid.tistory.com/entry/KARA-HARA-On-and-Off-at-MBC-Music">구하라의 On and Off at MBC Music</a>, 2014-12-30</li>
+			<li><a href="http://kipid.tistory.com/entry/SAF-SBS-Awards-Festival">SAF (SBS Awards Festival) 움짤 모음</a>, 2014-12-28</li>
+			<li><a href="http://kipid.tistory.com/entry/%EC%88%98%EB%A9%B4%EC%9D%98-%EA%B3%BC%ED%95%99-Science-of-Sleeping">수면의 과학 (Science of Sleeping)</a>, 2014-12-28 (미완)</li>
+			<li><a href="http://kipid.tistory.com/entry/Benjamin-Button-Letters-to-his-daughter">Benjamin Button - Letters to his daughter</a>, 2014-02-15</li>
+		</ul>
+		<div class="p"></div>
+	</div>
 </div>
 <!-- 
 <div class="sec noToggleUI"><h2 class="no-sec-N">References and Related Articles</h2>
